# phron-frontier

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: lint.yml
client/api/: Cargo.toml
client/api/src/: backend.rs
client/cli/: Cargo.toml
client/cli/src/frontier_db_cmd/: mapping_db.rs  mod.rs  tests.rs
client/consensus/: Cargo.toml
client/consensus/src/: lib.rs
client/db/: Cargo.toml
client/db/src/kv/: mod.rs  upgrade.rs
client/db/src/sql/: mod.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/kv/: mod.rs  worker.rs
client/mapping-sync/src/sql/: mod.rs
client/phron/evm-tracing/: Cargo.toml
client/phron/evm-tracing/src/: lib.rs
client/phron/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  raw.rs  trace_filter.rs
client/phron/evm-tracing/src/listeners/: call_list.rs  raw.rs
client/phron/evm-tracing/src/tracer/: calls.rs  layouts.rs  listeners.rs  mod.rs  serializers.rs  types.rs
client/phron/evm-tracing/src/types/: block.rs  mod.rs  serialization.rs  single.rs
client/phron/rpc-core/debug/: Cargo.toml
client/phron/rpc-core/debug/src/: lib.rs
client/phron/rpc-core/trace/: Cargo.toml
client/phron/rpc-core/trace/src/: lib.rs
client/phron/rpc-core/txpool/: Cargo.toml
client/phron/rpc-core/txpool/src/: lib.rs
client/phron/rpc-core/txpool/src/types/: content.rs  inspect.rs  mod.rs
client/phron/rpc-core/types/: Cargo.toml
client/phron/rpc/debug/: Cargo.toml
client/phron/rpc/debug/src/: lib.rs
client/phron/rpc/trace/: Cargo.toml
client/phron/rpc/trace/src/: lib.rs
client/phron/rpc/txpool/: Cargo.toml
client/phron/rpc/txpool/src/: lib.rs
client/rpc/: Cargo.toml
client/rpc/src/: eth_pubsub.rs  lib.rs  net.rs  txpool.rs  web3.rs
client/rpc/src/eth/: block.rs  client.rs  execute.rs  fee.rs  filter.rs  mod.rs  state.rs  submit.rs  transaction.rs
client/rpc/src/eth/cache/: lru_cache.rs  mod.rs
client/storage/: Cargo.toml
client/storage/src/: lib.rs
client/storage/src/overrides/: mod.rs  schema_v1_override.rs  schema_v2_override.rs  schema_v3_override.rs
frame/base-fee/: Cargo.toml
frame/dynamic-fee/: Cargo.toml
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs
frame/evm/: Cargo.toml
frame/evm-chain-id/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/dispatch/src/: lib.rs  mock.rs  tests.rs
frame/evm/src/: lib.rs
frame/evm/test-vector-support/src/: lib.rs
frame/hotfix-sufficients/: Cargo.toml
precompiles/: Cargo.toml
precompiles/macro/: Cargo.toml
precompiles/src/: precompile_set.rs  substrate.rs
precompiles/tests-external/: Cargo.toml  lib.rs
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/consensus/: Cargo.toml
primitives/consensus/src/: lib.rs
primitives/ethereum/: Cargo.toml
primitives/ethereum/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/evm/src/: lib.rs
primitives/phron/ext/: Cargo.toml
primitives/phron/ext/src/: lib.rs
primitives/phron/rpc/debug/: Cargo.toml
primitives/phron/rpc/debug/src/: lib.rs
primitives/phron/rpc/evm-tracing-events/: Cargo.toml
primitives/phron/rpc/evm-tracing-events/src/: evm.rs  gasometer.rs  lib.rs  runtime.rs
primitives/phron/rpc/txpool/: Cargo.toml
primitives/phron/rpc/txpool/src/: lib.rs
primitives/rpc/: CHANGELOG.md  Cargo.toml
primitives/rpc/src/: lib.rs
primitives/self-contained/: Cargo.toml
primitives/self-contained/src/: unchecked_extrinsic.rs
primitives/storage/: Cargo.toml
primitives/storage/src/: lib.rs
runtime/evm-tracer/: Cargo.toml
runtime/evm-tracer/src/: lib.rs
template/node/: Cargo.toml
template/node/src/: benchmarking.rs  eth.rs
template/node/src/rpc/: eth.rs  mod.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
