[package]
name = "evm-tracer"
authors = ["phron-platform"]
edition = "2021"
homepage = "https://thephron.io"
license = "Apache-2.0"
repository = "https://github.com/phronesis"
version = "0.1.0"

[dependencies]
fp-ext = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
ethereum-types = { workspace = true }
evm = { workspace = true }
evm-gasometer = { workspace = true }
evm-runtime = { workspace = true }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }
fc-evm-tracing = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm/std",
	"evm/with-serde",
	"fc-evm-tracing/std",
	"fp-evm/std",
	"fp-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
