[package]
name = "fc-evm-tracing"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://www.bifrostnetwork.com"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }

fp-rpc-debug = { workspace = true, features = ["std"] }
fp-rpc-evm-tracing-events = { workspace = true, features = ["std"] }

# Substrate
scale-codec = { package = "parity-scale-codec", workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }
