[package]
name = "fp-ext"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://www.bifrostnetwork.com"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true }

# Frontier
fp-rpc-evm-tracing-events = { workspace = true }

# Substrate
scale-codec = { workspace = true }
sp-externalities = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"ethereum-types/std",
	"fp-rpc-evm-tracing-events/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
