[package]
name = "fc-rpc-core-types"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://www.bifrostnetwork.com"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
