[package]
name = "fc-rpc-trace"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://www.bifrostnetwork.com"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

fc-evm-tracing = { workspace = true }
fc-rpc-core-trace = { workspace = true }
fc-rpc-core-types = { workspace = true }
fp-rpc-debug = { workspace = true }

# Substrate
prometheus-endpoint = { workspace = true }
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }

# Frontier
fc-consensus = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-rpc = { workspace = true }
