[package]
name = "fc-rpc-txpool"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://www.bifrostnetwork.com"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.6.0"

[dependencies]
jsonrpsee = { workspace = true, features = ["macros", "server"] }
rlp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }

fc-rpc-core-txpool = { workspace = true }
fp-rpc-txpool = { workspace = true, features = ["std"] }

# Substrate
frame-system = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
ethereum-types = { workspace = true, features = ["std"] }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
