[package]
name = "fp-rpc-debug"
authors = ["bifrost-platform"]
edition = "2021"
homepage = "https://www.bifrostnetwork.com"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
environmental = { workspace = true }
ethereum = { workspace = true }
ethereum-types = { workspace = true }
hex = { workspace = true, optional = true, features = ["serde"] }
serde = { workspace = true, optional = true, features = ["derive"] }

# Substrate
scale-codec = { package = "parity-scale-codec", workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"hex",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
