[package]
name = "fp-rpc-evm-tracing-events"
authors = ["phron-platform"]
edition = "2021"
homepage = "https://www.phron.ai"
license = "Apache-2.0"
repository = "https://github.com/phronesis"
version = "0.1.0"

[dependencies]
environmental = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }
sp-runtime-interface = { workspace = true }

# Ethereum
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
evm = { workspace = true, features = ["with-codec", "tracing"] }
evm-gasometer = { workspace = true, features = ["tracing"] }
evm-runtime = { workspace = true, features = ["tracing"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm/std",
	"sp-runtime-interface/std",
]
evm-tracing = ["evm-gasometer/tracing", "evm-runtime/tracing", "evm/tracing"]
