[package]
name = "fp-rpc-txpool"
authors = ["phron-platform"]
edition = "2021"
homepage = "https://www.phron.ai"
license = "Apache-2.0"
repository = "https://github.com/phronesis"
version = "0.6.0"

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }

# Substrate
parity-scale-codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-api = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"sp-api/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
